# Titan_Local_AI

./: .gitignore  Cargo.toml  FASE1.md  FASE_2_COMPLETATA.md  LICENSE  LOG_SVILUPPO.md  README.md  ROADMAP_AND_UX.md  check_output.txt
documents/: ARCHITECTURE.md  VISION.md
src/: app_state.rs  main.rs
src/engine/: hardware_detect.rs  llm_runner.rs  mod.rs
src/models/: gguf_parser.rs  mod.rs
src/ui/: chat_panel.rs  main_window.rs  mod.rs  model_sidebar.rs
