[package]
name = "titan_ai"
version = "0.1.0"
edition = "2021"
authors = ["Titan Team"]
description = "Client LLM Ultra-Leggero in Rust"

[dependencies]
# UI: eframe con feature flags minimali. Usiamo glow per leggerezza su hardware datato.
eframe = { version = "0.27", default-features = false, features = [
    "accesskit",     # Accessibilità
    "default_fonts", # Font di base
    "glow",          # Rendering OpenGL (più leggero di WGPU)
    "persistence",   # Salvataggio stato UI
] }

# Concorrenza: Canali ultra-veloci per la separazione UI-Engine
crossbeam-channel = "0.5"

# Rete: Per comunicare con il motore llama-server locale invisibile
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Gestione Errori: Propagazione sicura senza panico
anyhow = "1.0"

# Logging: Tracing leggero per il debug
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serializzazione: Per configurazioni e storia chat
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rilevamento Hardware: Configurazione corretta per 0.30
sysinfo = { version = "0.30", default-features = false }

# API Native Windows per DXGI (GPU Bare-Metal)
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_Graphics_Dxgi"] }

# Selettore File Nativo: Zero overhead, solo dipendenze base.
rfd = "0.14"

[profile.release]
opt-level = "z"      # Ottimizza per la dimensione del binario
lto = true           # Link Time Optimization per eliminare codice morto
codegen-units = 1    # Massimizza le ottimizzazioni a scapito del tempo di compilazione
panic = "abort"      # Rimuove l'overhead dell'unwinding per piccoli binari
strip = true         # Rimuove i simboli di debug dal binario finale